Handling of JS logs.

--- a/lib/assets/webpage/html/swipe.html
+++ b/lib/assets/webpage/html/swipe.html
@@ -267,6 +267,8 @@
     }
 
     function setFontSize(fontSizePercentage){
+    var args = [fontSizePercentage];
+    window.flutter_inappwebview.callHandler('log', ...args);
       rendition.themes.fontSize('${fontSizePercentage}%');
       rendition.reportLocation();
     }
