Set font size fix.

--- a/lib/assets/webpage/html/swipe.html
+++ b/lib/assets/webpage/html/swipe.html
@@ -267,9 +267,7 @@
     }
 
     function setFontSize(fontSizePercentage){
-    var args = [fontSizePercentage];
-    window.flutter_inappwebview.callHandler('log', ...args);
-      rendition.themes.fontSize('${fontSizePercentage}%');
+      rendition.themes.fontSize(`${fontSizePercentage}%`);
       rendition.reportLocation();
     }
 
